# rust-api

./: README.md  compose.yaml
api/: .sample.env  Cargo.toml  README.md  dockerfile
api/src/: main.rs
api/src/handlers/: lib.rs
api/src/handlers/alanPartridgeQuote/: apQuoteHandler.rs
api/src/handlers/octopusEnergy/: octopusHandler.rs
frontend/: .dockerignore  dockerfile  package-lock.json  package.json
frontend/src/app/about/: page.tsx
helm-smart/: Chart.yaml  values.yaml
helm-smart/templates/: api-deploy-solution.yml  api-service-solution.yml  frontend-deploy-solution.yml  frontend-service-solution.yml  postgres-deploy-solution.yml  postgres-service-solution.yml
octopus_api/src/handlers/root/: rootHandler.rs
