[package]
name = "octopus_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
reqwest = "0.11.20"
tokio = { version = "1", features = ["full"] }


[lib]
name="api_handlers"
path="src/handlers/lib.rs"
