[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rand = "0.8.5"
reqwest = {version = "0.11.20", features = ["json"]}
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }


[lib]
name="api_handlers"
path="src/handlers/lib.rs"
